# sarge-security-codeql

./: .envrc  .gitignore  README.md  abstract-csv-file-differences.sh  ci-like-config.yml  create-codeql-db.sh  pyproject.toml  run-codeql-analysis.sh  run-codeql.sh  run-flask.sh  time-queries.sh
.github/codeql/: codeql-config.yml  golden.csv
.github/workflows/: codeql.yml  format.yml
codeql-queries/: GetRemoteFlowSource.ql  GetRemoveFlowSource.ql  GetSanitizer.ql  GetSargeRunSinks.ql  Sarge.ql  SargeLib.qll  ci-queries.qls  qlpack.yml
src/sarge_security/: app.py
